# remux

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: App.tsx  app.config.js  app.json  eas.json  fingerprint.config.js  metro.config.js  package.json
app/scripts/: eas-with-env.mjs
cli/: Cargo.toml  config.cjs  extensionManifest.cjs  extensionProcess.cjs  extensionRegistry.cjs  fsRelay.cjs  httpServer.cjs  jsonRpc.cjs  logger.cjs  main.cjs  notifications.cjs  previewRelay.cjs  restart.cjs  rpcRouter.cjs  start.cjs  viewerProvider.cjs  wsServer.cjs
cli-rs/: Cargo.toml
cli-rs/src/: config.rs  lib.rs  logs.rs  main.rs  paths.rs  runtime.rs  supervise.rs  time.rs
cli-rs/src/extensions/: discovery.rs  mod.rs
cli-rs/src/fs/: core.rs  git.rs  mod.rs  relay.rs
cli-rs/src/http/: catalog.rs  icons.rs  viewers.rs
cli-rs/src/rpc/: jsonrpc.rs  mod.rs
cli-rs/tests/: e2e.rs  fs_core.rs  fs_relay.rs  notifications.rs  ws.rs
cli/core/: coreRouter.cjs  fs.cjs
cli/src/: auth.rs  config.rs  guardian.rs  lib.rs  logs.rs  main.rs  monitor.rs  notifications.rs  runtime.rs  supervise.rs  watchdog.rs
cli/src/cli/: doctor.rs  install.rs  mod.rs  root.rs  status.rs  systemd.rs  workload.rs
cli/src/extensions/: manifest.rs  mod.rs  process.rs  runstate.rs  supervisor.rs
cli/src/fs/: core.rs
cli/src/http/: mod.rs
cli/src/resource/: systemd.rs  topology.rs
cli/src/rpc/: mod.rs  router.rs  ws.rs
cli/tests/: auth.rs  chaos.rs  config.test.js  e2e.rs  extension-process.test.js  extension-registry.test.js  fs-core.test.js  fs-relay.test.js  http-server.test.js  http.rs  json-rpc.test.js  logger.test.js  main.test.js  notifications.rs  notifications.test.js  preview-relay.test.js  rpc-router.test.js  start.test.js  viewer-provider.test.js  ws-server.test.js  ws.rs
crates/remux/: Cargo.toml
crates/remux-compute/: Cargo.toml  README.md
crates/remux-compute/src/: lib.rs
crates/remux-compute/tests/: process_boundary.rs
crates/remux-extension-host/: Cargo.toml  README.md
crates/remux-extension-rpc/: Cargo.toml  README.md
crates/remux-tts/: Cargo.toml
crates/remux-tts/src/: alignment.rs  artifact.rs  batch.rs  batch_artifact.rs  corpus.rs  frontend.rs  lib.rs  model.rs  pronunciation.rs  speech.rs  streaming_artifact.rs  timing.rs
deploy/systemd/: remux-core.slice  remux-extensions.slice  remux.service  remux.slice
docs/: README.md  codex-app-server-facade-thread-history-spec.md  codex-app-server-remux-streaming-current-state.md  codex-client-transcript-read-api-spec.md  codex-current-thread-send-invalidation-spec.md  codex-rust-transcript-server-spec.md  codex-transcript-reconciliation-design.md  codex-transcript-store-scroll-implementation-spec.md
docs/architecture/: codex-extension.md  codex-streaming.md  remux-runtime.md
docs/guides/: development.md  extension-authoring.md  testing.md
docs/specs/: README.md  cli-rust-port-pass-1.md  cli-rust-port-pass-2.md  cli-rust-port-pass-3-auth.md  cli-rust-port-pass-3b-cli.md  cli-rust-port.md  extension-operations-and-logs.md  files-tab.md  light-mode-polish.md  narrate-baseline-patch-rd.md  narrate-batch-alignment.md  narrate-local-g2p-sparse-patches.md  narrate-pronunciation-audit.md  narrate-service.md  narrate-streaming-g2p-contract-rd.md  narrate-streaming-g2p-rd.md  narrate-streaming-g2p.md  narrate-structural-transcripts.md  narrate-viewer-playback.md  (+10 more)
extensions/narrate/server/: Cargo.toml
extensions/narrate/server/prompts/: primary-v6.txt  pronunciation-audit-v4.txt  structural-transcript-v2.txt
extensions/narrate/server/schemas/: narration-artifact-v4.json  narration-document-v1.json  primary-v6.json  pronunciation-audit-output-v4.json  structural-transcript-output-v2.json
extensions/narrate/server/schemas/fixtures/: narration-artifact-v4.invalid.json  narration-artifact-v4.valid.json  narration-document-v1.invalid.json  narration-document-v1.valid.json  pronunciation-audit-output-v4.invalid.json  pronunciation-audit-output-v4.valid.json
extensions/narrate/server/src/: inference_gate.rs  main.rs  media.rs  narration.rs  planning.rs  pronunciation_audit.rs  source_mapping.rs  streaming.rs  structural_transcript.rs  synthesis_profile.rs  util.rs
scripts/: typecheck-linked-viewers.mjs  watch-viewers.cjs
(+383 files in other folders)
