[package]
name = "remux-compute"
version = "0.1.0"
edition = "2021"
description = "Typed process-isolated compute tasks for trusted Remux extensions"
readme = "README.md"
repository = "https://github.com/epicchetan/remux"
publish = false

[lib]
name = "remux_compute"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
