[package]
name = "remux-tts"
version = "0.1.0"
edition = "2024"
description = "Native Kokoro narration task for Remux"
repository = "https://github.com/epicchetan/remux"
publish = false

[lib]
name = "remux_tts"
path = "src/lib.rs"

[dependencies]
misaki-rs = { version = "0.3.0", default-features = false }
ndarray = "0.17"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native", "api-24"] }
ort-sys = { version = "=2.0.0-rc.12", features = ["api-24"] }
remux-compute = { path = "../remux-compute" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
unicode-normalization = "0.1"
